Update notebook 4 with image

--- a/notebooks/04_nlp_deeplearning.ipynb
+++ b/notebooks/04_nlp_deeplearning.ipynb
@@ -1,24 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "04_nlp_deeplearning.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "JaWAu5ujnB4g"
+      },
       "source": [
         "# Word Embeddings and Deep Learning for NLP\n",
         "\n",
@@ -27,43 +13,40 @@
         "A brief overview of Word2Vec based Embeddings.\n",
         "A brief on HuggingFace Transformer :hugs: based implementation of NLP tasks\n",
         "Note: This is just an overview and not an exhaustive material on NLP with Deep Learning"
-      ],
-      "metadata": {
-        "id": "JaWAu5ujnB4g"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Text Representation using Word2Vec"
-      ],
       "metadata": {
         "id": "0h_gkXlco7E9"
-      }
+      },
+      "source": [
+        "## Text Representation using Word2Vec"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "v8rbvEvSpKj2"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.datasets import fetch_20newsgroups\n",
         "\n",
         "pd.options.display.max_colwidth = 200"
-      ],
-      "metadata": {
-        "id": "v8rbvEvSpKj2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Get Dataset"
-      ],
       "metadata": {
         "id": "Cna9YhwkpMX-"
-      }
+      },
+      "source": [
+        "### Get Dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -78,90 +61,95 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "twenty_corpus = fetch_20newsgroups(subset='train',\n",
-        "    categories=categories, shuffle=True, random_state=42)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "wgexPcuFpUjs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "twenty_corpus = fetch_20newsgroups(subset='train',\n",
+        "    categories=categories, shuffle=True, random_state=42)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "[news.split('\\n')[1] for news in twenty_corpus.data[:10]]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Mt4n_TZWpWa_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "[news.split('\\n')[1] for news in twenty_corpus.data[:10]]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "twenty_corpus.target[:10]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qVhpKEv1pYX1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "twenty_corpus.target[:10]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "corpus = [news.split('\\n')[1] for news in twenty_corpus.data[:10]]\n",
-        "labels = [categories[i] for i in twenty_corpus.target[:10]]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "swQzWs1qpa_4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "corpus = [news.split('\\n')[1] for news in twenty_corpus.data[:10]]\n",
+        "labels = [categories[i] for i in twenty_corpus.target[:10]]"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PoU7a4z0pa9C"
+      },
+      "outputs": [],
       "source": [
         "corpus = np.array(corpus)\n",
         "corpus_df = pd.DataFrame({'Document': corpus, \n",
         "                          'Category': labels})\n",
         "corpus_df = corpus_df[['Document', 'Category']]\n",
         "corpus_df"
-      ],
-      "metadata": {
-        "id": "PoU7a4z0pa9C"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Preprocess Dataset"
-      ],
       "metadata": {
         "id": "C35Ma3AbphM2"
-      }
+      },
+      "source": [
+        "### Preprocess Dataset"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HXdZeOx7pdf0"
+      },
+      "outputs": [],
       "source": [
         "import nltk\n",
         "import re\n",
         "nltk.download('stopwords')\n",
         "nltk.download('punkt')"
-      ],
-      "metadata": {
-        "id": "HXdZeOx7pdf0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DInq975npddO"
+      },
+      "outputs": [],
       "source": [
         "def normalize_document(doc):\n",
         "    # lower case and remove special characters\\whitespaces\n",
@@ -175,39 +163,37 @@
         "    # re-create document from filtered tokens\n",
         "    doc = ' '.join(filtered_tokens)\n",
         "    return doc"
-      ],
-      "metadata": {
-        "id": "DInq975npddO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4AGfGfxPpdaS"
+      },
+      "outputs": [],
       "source": [
         "stop_words = nltk.corpus.stopwords.words('english')\n",
         "normalize_corpus = np.vectorize(normalize_document)\n",
         "\n",
         "norm_corpus = normalize_corpus(corpus)\n",
         "norm_corpus"
-      ],
-      "metadata": {
-        "id": "4AGfGfxPpdaS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Train Word2Vec Model"
-      ],
       "metadata": {
         "id": "ARyquvKiptSL"
-      }
+      },
+      "source": [
+        "### Train Word2Vec Model"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "y1m_QYz8qT96"
+      },
       "source": [
         "The Skip-gram model architecture usually tries to achieve the reverse of what the CBOW model does. It tries to predict the source context words (surrounding words) given a target word (the center word).\n",
         "\n",
@@ -217,39 +203,40 @@
         "\n",
         "Thus the model tries to predict the context_window words based on the target_word.\n",
         "\n",
-        "``\n",
-        "![skipgram_arch.png]()\n",
-        "``"
-      ],
-      "metadata": {
-        "id": "y1m_QYz8qT96"
-      }
+        "\n",
+        "![skipgram_arch](../assets/skipgram_arch.png)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import nltk\n",
-        "from gensim.models import word2vec"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "0hKGNvMopwVV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import nltk\n",
+        "from gensim.models import word2vec"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "tokenized_corpus = [nltk.word_tokenize(doc) for doc in norm_corpus]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Pun4KemLpwSs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "tokenized_corpus = [nltk.word_tokenize(doc) for doc in norm_corpus]"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eZ2yy0YfpwQO"
+      },
+      "outputs": [],
       "source": [
         "# Set values for various parameters\n",
         "feature_size = 15    # Word vector dimensionality  \n",
@@ -261,38 +248,38 @@
         "w2v_model = word2vec.Word2Vec(tokenized_corpus, size=feature_size, \n",
         "                              window=window_context, min_count = min_word_count,\n",
         "                              sg=sg, sample=sample, iter=5000)\n"
-      ],
-      "metadata": {
-        "id": "eZ2yy0YfpwQO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Visualize Embeddings"
-      ],
       "metadata": {
         "id": "ADkVnAVzp0YD"
-      }
+      },
+      "source": [
+        "### Visualize Embeddings"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "39ig6TP-p3LE"
+      },
+      "outputs": [],
       "source": [
         "from matplotlib import pyplot as plt\n",
         "%matplotlib inline\n",
         "# visualize embeddings\n",
         "from sklearn.manifold import TSNE"
-      ],
-      "metadata": {
-        "id": "39ig6TP-p3LE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7SkvFPZWp40x"
+      },
+      "outputs": [],
       "source": [
         "words = w2v_model.wv.index2word\n",
         "wvs = w2v_model.wv[words]\n",
@@ -306,76 +293,88 @@
         "plt.scatter(T[:, 0], T[:, 1], c='blue')\n",
         "for label, x, y in zip(labels, T[:, 0], T[:, 1]):\n",
         "    plt.annotate(label, xy=(x+1, y+1), xytext=(0, 0), textcoords='offset points')"
-      ],
-      "metadata": {
-        "id": "7SkvFPZWp40x"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Transformers 🤗"
-      ],
       "metadata": {
         "id": "EwgNs0sSp6Xk"
-      }
+      },
+      "source": [
+        "## Transformers 🤗"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install transformers"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XcQXF_tjqAdk"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install transformers"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from transformers import pipeline"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "_Ovs8dbmqD9b"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from transformers import pipeline"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "classifier = pipeline('sentiment-analysis')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "m71pFXF-qFf4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "classifier = pipeline('sentiment-analysis')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "classifier.tokenizer('The hugging-face transformer package really simplifies NLP tasks')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "EDUhgwEnqGxH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "classifier.tokenizer('The hugging-face transformer package really simplifies NLP tasks')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "classifier('The hugging-face transformer package really simplifies NLP tasks')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "a8Xin8auqIMN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "classifier('The hugging-face transformer package really simplifies NLP tasks')"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "04_nlp_deeplearning.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
