--- a/notebooks/04_nlp_deeplearning.ipynb
+++ b/notebooks/04_nlp_deeplearning.ipynb
@@ -231,6 +231,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Gensim\n",
+        "The gensim framework, created by Radim Řehůřek consists of a robust, efficient and scalable implementation of the Word2Vec model. We will leverage the same on our sample toy corpus. In our workflow, we will tokenize our normalized corpus and then focus on the following four parameters in the Word2Vec model to build it.\n",
+        "\n",
+        "size: The word embedding dimensionality\n",
+        "window: The context window size\n",
+        "min_count: The minimum word count\n",
+        "sample: The downsample setting for frequent words\n",
+        "sg: Training model, 1 for skip-gram otherwise CBOW\n",
+        "We will build a simple Word2Vec model on the corpus and visualize the embeddings."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
